# data_quality

./: README.md  pyproject.toml  read.txt  test.py  validation_processor.py
gx/: great_expectations.yml
gx/checkpoints/: AIS_CHECKPOINT.json
gx/expectations/: .ge_store_backend_id  AIS_EXPECTATION_SUITE.json
gx/validation_definitions/: AIS_VALIDATION_DEFINITION.json
src/checks/: file_validation_checks.py  great_expectations_checks.py
src/config/: data_expectations.yaml  expectation_mapping_config.yaml  file_validation.yaml  settings.py
src/data/: stage-ais-cleaned-data-delivery-stream-1-2025-03-27-08-14-57  test.csv  testing.yaml
src/utils/: ExpectationMapper.py  data_loader.py  file_utils.py  parse_validation_result.py
src/validators/: validate.py  validate_without_batch.py
tests/: test2.py  test22.py  test234.py  test3.py  test4.py  test5.py  test6.py
