[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.9,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pandas = "^2.1"
pyarrow = "^19.0.1"
pydeequ = "^1.4.0"
boto3 = "^1.37.30"
apache-airflow = "^2.10.5"
great-expectations = "^1.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
hypothesis = "^6.129.4"

